<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_weather" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_current_weather"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:layout_marginVertical="@dimen/_8sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/iv_weather"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:src="@drawable/img_rainy_day"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/image_weather" />

                    <TextView
                        android:id="@+id/tv_current_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/city"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintStart_toEndOf="@id/iv_weather"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/txt_main"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintStart_toStartOf="@id/tv_current_city"
                        app:layout_constraintTop_toBottomOf="@id/tv_current_city" />

                    <TextView
                        android:layout_marginEnd="@dimen/_4sdp"
                        android:id="@+id/tv_desc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/txt_detail"
                        android:textSize="@dimen/_9ssp"
                        app:layout_constraintEnd_toStartOf="@id/tv_temp_celsius"
                        app:layout_constraintStart_toStartOf="@id/tv_main"
                        app:layout_constraintTop_toBottomOf="@id/tv_main" />

                    <TextView
                        android:layout_marginStart="@dimen/_4sdp"
                        android:id="@+id/tv_temp_celsius"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/txt_zero"
                        android:textSize="@dimen/_40ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <include
                android:id="@+id/lyCity"
                layout="@layout/row_city_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:layout_marginVertical="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="@id/cv_current_weather"
                app:layout_constraintStart_toStartOf="@id/cv_current_weather"
                app:layout_constraintTop_toBottomOf="@id/cv_current_weather" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.constraintlayout.widget.ConstraintLayout>