<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="cv_new_york, cv_singapore, cv_mumbai"
        app:flow_horizontalStyle="packed"
        app:flow_wrapMode="aligned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_singapore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="@id/cv_new_york"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cv_new_york">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:id="@+id/iv_singapore_weather"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:fitsSystemWindows="true"
                android:src="@drawable/img_rainy_day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_weather" />

            <TextView
                android:id="@+id/tv_singapore_city"
                style="@style/textStyle.1"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/txt_singapore"
                app:layout_constraintStart_toEndOf="@id/iv_singapore_weather"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_sg_celsius_temp"
                style="@style/textStyle.2"
                android:text="@string/txt_zero"
                app:layout_constraintEnd_toEndOf="@id/iv_singapore_weather"
                app:layout_constraintStart_toStartOf="@id/iv_singapore_weather"
                app:layout_constraintTop_toBottomOf="@id/iv_singapore_weather" />

            <TextView
                android:id="@+id/tv_main_sg"
                style="@style/textStyle.3"
                android:text="@string/txt_main"
                app:layout_constraintStart_toStartOf="@id/tv_singapore_city"
                app:layout_constraintTop_toBottomOf="@id/tv_singapore_city" />

            <TextView
                android:id="@+id/tv_detail_sg"
                style="@style/textStyle.3"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/txt_detail"
                app:layout_constraintStart_toStartOf="@id/tv_main_sg"
                app:layout_constraintTop_toBottomOf="@id/tv_main_sg" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_new_york"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:id="@+id/iv_new_york_weather"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/img_rainy_day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_weather" />

            <TextView
                android:id="@+id/tv_new_york_city"
                style="@style/textStyle.1"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/txt_new_york"
                app:layout_constraintStart_toEndOf="@id/iv_new_york_weather"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_ny_celsius_temp"
                style="@style/textStyle.2"
                android:text="@string/txt_zero"
                app:layout_constraintEnd_toEndOf="@id/iv_new_york_weather"
                app:layout_constraintStart_toStartOf="@id/iv_new_york_weather"
                app:layout_constraintTop_toBottomOf="@id/iv_new_york_weather" />

            <TextView
                android:id="@+id/tv_main_ny"
                style="@style/textStyle.3"
                android:text="@string/txt_main"
                app:layout_constraintStart_toStartOf="@id/tv_new_york_city"
                app:layout_constraintTop_toBottomOf="@id/tv_new_york_city" />

            <TextView
                android:id="@+id/tv_detail_ny"
                style="@style/textStyle.3"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/txt_detail"
                app:layout_constraintStart_toStartOf="@id/tv_main_ny"
                app:layout_constraintTop_toBottomOf="@id/tv_main_ny" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_mumbai"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:id="@+id/iv_mumbai_weather"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/img_rainy_day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_weather" />

            <TextView
                android:id="@+id/tv_mumbai_city"
                style="@style/textStyle.1"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/txt_mumbai"
                app:layout_constraintStart_toEndOf="@id/iv_mumbai_weather"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_mb_celsius_temp"
                style="@style/textStyle.2"
                android:text="@string/txt_zero"
                app:layout_constraintEnd_toEndOf="@id/iv_mumbai_weather"
                app:layout_constraintStart_toStartOf="@id/iv_mumbai_weather"
                app:layout_constraintTop_toBottomOf="@id/iv_mumbai_weather" />

            <TextView
                android:id="@+id/tv_main_mb"
                style="@style/textStyle.3"
                android:text="@string/txt_main"
                app:layout_constraintStart_toStartOf="@id/tv_mumbai_city"
                app:layout_constraintTop_toBottomOf="@id/tv_mumbai_city" />

            <TextView
                android:id="@+id/tv_detail_mb"
                style="@style/textStyle.3"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/txt_detail"
                app:layout_constraintStart_toStartOf="@id/tv_main_mb"
                app:layout_constraintTop_toBottomOf="@id/tv_main_mb" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="cv_delhi,cv_sydney,cv_melbourne"
        app:flow_horizontalStyle="packed"
        app:flow_wrapMode="aligned"
        app:layout_constraintEnd_toEndOf="@id/flow_1"
        app:layout_constraintStart_toStartOf="@id/flow_1"
        app:layout_constraintTop_toBottomOf="@id/flow_1" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_delhi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:id="@+id/iv_delhi_weather"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:fitsSystemWindows="true"
                android:src="@drawable/img_rainy_day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_weather" />

            <TextView
                android:id="@+id/tv_delhi_city"
                style="@style/textStyle.1"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/delhi"
                app:layout_constraintStart_toEndOf="@id/iv_delhi_weather"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_dh_celsius_temp"
                style="@style/textStyle.2"
                android:text="@string/txt_zero"
                app:layout_constraintEnd_toEndOf="@id/iv_delhi_weather"
                app:layout_constraintStart_toStartOf="@id/iv_delhi_weather"
                app:layout_constraintTop_toBottomOf="@id/iv_delhi_weather" />

            <TextView
                android:id="@+id/tv_main_dh"
                style="@style/textStyle.3"
                android:text="@string/txt_main"
                app:layout_constraintStart_toStartOf="@id/tv_delhi_city"
                app:layout_constraintTop_toBottomOf="@id/tv_delhi_city" />

            <TextView
                android:id="@+id/tv_detail_dh"
                style="@style/textStyle.3"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/txt_detail"
                app:layout_constraintStart_toStartOf="@id/tv_main_dh"
                app:layout_constraintTop_toBottomOf="@id/tv_main_dh" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_sydney"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:id="@+id/iv_sydney_weather"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/img_rainy_day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_weather" />

            <TextView
                android:id="@+id/tv_sydney_city"
                style="@style/textStyle.1"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/sydney"
                app:layout_constraintStart_toEndOf="@id/iv_sydney_weather"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_sy_celsius_temp"
                style="@style/textStyle.2"
                android:text="@string/txt_zero"
                app:layout_constraintEnd_toEndOf="@id/iv_sydney_weather"
                app:layout_constraintStart_toStartOf="@id/iv_sydney_weather"
                app:layout_constraintTop_toBottomOf="@id/iv_sydney_weather" />

            <TextView
                android:id="@+id/tv_main_sy"
                style="@style/textStyle.3"
                android:text="@string/txt_main"
                app:layout_constraintStart_toStartOf="@id/tv_sydney_city"
                app:layout_constraintTop_toBottomOf="@id/tv_sydney_city" />

            <TextView
                android:id="@+id/tv_detail_sy"
                style="@style/textStyle.3"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/txt_detail"
                app:layout_constraintStart_toStartOf="@id/tv_main_sy"
                app:layout_constraintTop_toBottomOf="@id/tv_main_sy" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_melbourne"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:id="@+id/iv_melbourne_weather"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/img_rainy_day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image_weather" />

            <TextView
                android:id="@+id/tv_melbourne_city"
                style="@style/textStyle.1"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/melbourne"
                app:layout_constraintStart_toEndOf="@id/iv_melbourne_weather"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_mn_celsius_temp"
                style="@style/textStyle.2"
                android:text="@string/txt_zero"
                app:layout_constraintEnd_toEndOf="@id/iv_melbourne_weather"
                app:layout_constraintStart_toStartOf="@id/iv_melbourne_weather"
                app:layout_constraintTop_toBottomOf="@id/iv_melbourne_weather" />

            <TextView
                android:id="@+id/tv_main_mn"
                style="@style/textStyle.3"
                android:text="@string/txt_main"
                app:layout_constraintStart_toStartOf="@id/tv_melbourne_city"
                app:layout_constraintTop_toBottomOf="@id/tv_melbourne_city" />

            <TextView
                android:id="@+id/tv_detail_mn"
                style="@style/textStyle.3"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/txt_detail"
                app:layout_constraintStart_toStartOf="@id/tv_main_mn"
                app:layout_constraintTop_toBottomOf="@id/tv_main_mn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>